# hydro-platform

./: .gitignore  CLAUDE.md  DEVELOPMENT_PLAN.md  README.md
.github/workflows/: ci.yml
backend/: README.md  pom.xml
docs/: api-design.md  architecture.md  database-design.md  deployment.md  roadmap.md  tech-stack.md
frontend/: README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
frontend/coverage/: clover.xml  coverage-final.json  lcov.info
frontend/coverage/lcov-report/: index.html
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css  setupTests.js
frontend/src/config/: cesium.js
frontend/src/hooks/: useKeyPress.js
frontend/src/services/: api.js  api.ts  authService.js  authService.ts  (+12 more)
infrastructure/: README.md  docker-compose.infra.yml  docker-compose.yml
infrastructure/rabbitmq/: definitions.json  rabbitmq.conf
k8s/: README.md
k8s/deployment/: backend-deployment.yaml  frontend-deployment.yaml  hpa.yaml  infrastructure.yaml  ingress.yaml  rbac.yaml
k8s/monitoring/: grafana.yaml  prometheus.yaml
k8s/operator/: crd-model.yaml  operator.yaml
models/bod_do/: config.json  model.py
models/frequency_analysis/: config.json  model.py
models/muskingum/: config.json  model.py
models/penman_monteith/: Dockerfile  config.json  model.py
models/python/: Dockerfile
models/scs_cn/: config.json  model.py
scripts/: start-backend.sh  start.sh  stop.sh
sdk/python/: README.md  requirements.txt  setup.py
sdk/templates/: README.md
sdk/templates/cpp/: CMakeLists.txt
sdk/templates/cpp/include/: model.h
(+357 files in other folders)
